--- a/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
@@ -113,16 +113,7 @@
                                             naslov: @item.Title
                                           </td>
                                         </tr>
-                                     @*   <tr>
-                                          <td>
-                                            PetId: @item.PetId
-                                          </td>
-                                        </tr>
-                                        <tr>
-                                          <td>
-                                            IdAdress: @item.IdAdress
-                                          </td>
-                                        </tr>*@
+                        
                     
                                     </table>                       
 
@@ -143,52 +134,52 @@
                                 <table id="listing_1">
                                     <tr>
                                       <td>
-                                        opis: vrijednost 1
+                                        opis: vrtic za pse do uzrasti od 5 godina
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        cijena: vrijednost 1   
+                                        cijena: 20 kn dan
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        zivotinje: vrijednost 1
+                                        zivotinje: samo psi
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        lokacija: vrijednost 1
+                                        lokacija: kod parkinga
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        period od: vrijednost 1
+                                        period od: 8
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        period do: vrijednost 1
+                                        period do: 4
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        stan ili kuca: vrijednost 1
+                                        stan ili kuca: kuca
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        kat: vrijednost 1
+                                        kat: prizemlje
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        recenzije do sad, prosjek ocjena + opis: vrijednost 1
+                                        recenzije do sad, prosjek ocjena + opis: 5.0
                                       </td>
                                     </tr>
                                     <tr>
                                       <td>
-                                        zivotinja kartica: vrijednost 1
+                                        zivotinja kartica: /
                                       </td>
                                     </tr>
                                   </table>
@@ -201,52 +192,50 @@
                                     <table id="listing_2">
                                         <tr>
                                           <td>
-                                            opis: vrijednost 2
+                                            opis: sisamo pse svih vrsta
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            cijena: vrijednost 2   
+                                            cijena: 50 kn frizura                                          </td>
+                                        </tr>
+                                        <tr>
+                                          <td>
+                                            zivotinje: samo psi
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            zivotinje: vrijednost 2
+                                            lokacija: tresnjevka 2
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            lokacija: vrijednost 2
+                                            period od: jucer
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            period od: vrijednost 2
+                                            period do: sutra
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            period do: vrijednost 2
+                                            stan ili kuca: salon
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            stan ili kuca: vrijednost 2
+                                            kat: prizemlje
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            kat: vrijednost 2
-                                          </td>
+                                            recenzije do sad, prosjek ocjena + opis: svi sretni i zadovoljni                                          </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            recenzije do sad, prosjek ocjena + opis: vrijednost 2
-                                          </td>
-                                        </tr>
-                                        <tr>
-                                          <td>
-                                            zivotinja kartica: vrijednost 2
+                                            zivotinja kartica: /
                                           </td>
                                         </tr>  
                                     </table>                                </td>
@@ -313,52 +302,52 @@
                                     <table id="4">
                                         <tr>
                                           <td>
-                                            opis: vrijednost 4
+                                            opis: veterinarska stanica
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            cijena: vrijednost 4   
+                                            cijena: 500 kn / sat
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            zivotinje: vrijednost 4
+                                            zivotinje: sve
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            lokacija: vrijednost 4
+                                            lokacija: u brdu
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            period od: vrijednost 4
+                                            period od: 2008
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            period do: vrijednost 4
+                                            period do: do penzije
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            stan ili kuca: vrijednost 4
+                                            stan ili kuca: ordinacija
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            kat: vrijednost 4
+                                            kat: 4
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            recenzije do sad, prosjek ocjena + opis: vrijednost 4
+                                            recenzije do sad, prosjek ocjena + opis: strah i trepet za sve mace
                                           </td>
                                         </tr>
                                         <tr>
                                           <td>
-                                            zivotinja kartica: vrijednost 4
+                                            zivotinja kartica: /
                                           </td>
                                         </tr>  
                                     </table>                                </td>
