--- a/src_backend/PetCareAppMVC/Features/Listings/MyListings.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Listings/MyListings.cshtml
@@ -162,7 +162,7 @@ console.log(objJson);
                     //}
                 //listing_table.innerHTML +=      '<input type="button" onclick="alert()" value="Uredi" id="uredi_'+String(i)+'"/>'
                 listing_table.innerHTML +=      
-                '<input type="button" onclick="window.open(\'/Listings/ManageListing?sessionId='+
+                '<input type="button" onclick="window.open(\'/Listings/Edit?sessionId='+
                 sessionid+
                 '&UserName='+
                 username+
