--- a/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
+++ b/src_backend/PetCareAppMVC/Features/Listings/Index.cshtml
@@ -1,7 +1,7 @@
 @*@model PetCareAppMVC.Features.Login.LoginViewModel*@
 @*@model PetCareAppMVC.Features.Listings.SessionViewModel*@
 
-@model IList<Domain.Adlisting>
+@model IList<Domain.Listings>
 
 @{
     ViewData["Title"] = "oglasi";
@@ -87,7 +87,7 @@
             <td>
 
 
- <table id= @item.AdlistingId>
+ <table id= @item.ListingId>
 
                                         <tr>
                                           <td>
